<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="se.sigmaconnectivity.blescanner.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <ImageView
            android:id="@+id/ivBLE"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@drawable/ble_background"
            android:scaleType="centerInside"
            android:src="@drawable/ic_ble"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvLastUpdate"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="11dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivBLE"
            app:layout_constraintEnd_toStartOf="@+id/cvScannedToday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBLE">

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Subtitle"
                    android:text="@string/home_last_update_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ColorBody.Bold.Big"
                    android:text="@{vm.lastUpdateHour}"
                    tools:text="14:55" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ColorBody.Bold.Big"
                    android:text="@{vm.lastUpdateDate}"
                    tools:text="Mar 20" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvScannedToday"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="12dp"
            app:cardCornerRadius="11dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivBLE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvLastUpdate"
            app:layout_constraintTop_toBottomOf="@+id/ivBLE">

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Subtitle"
                    android:text="@string/home_scanned_today_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{vm.devicesAmount}"
                    style="@style/ColorBody.Bold.Big"
                    tools:text="156" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ColorBody.Bold.Big"
                    android:text="@string/home_devices" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home_subtitle"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            style="@style/Subtitle.Black.Bold"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvLastUpdate" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
            style="@style/Subtitle"
            android:text="@string/lorem_ipsum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/btn_startService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.turnOnLEService()}"
            android:text="Start service!"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btn_stopService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.turnOffLEService()}"
            android:text="Stop service!"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
